Fixed jump issue on refresh

--- a/app/globals.css
+++ b/app/globals.css
@@ -211,3 +211,13 @@ ul {
   padding: 1.5rem;
   border-radius: 15px;
 }
+
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
+#__next {
+  overflow-x: hidden;
+  width: 100%;
+}
